# cylinder

./: .editorconfig  .gitignore  .gitmodules  Makefile  README.md  entangled.dhall  environments.yml  pyproject.toml  requirements.txt  run.py  run.sh  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: main.yml
blob/: .gitignore
data/: .gitignore  Makefile  cylinder_run.py  pipeFlow_future_run.py  pipeFlow_run.py  run.py  run_c7.py
data/c1/baseCase/system/: controlDict
data/pipeFlowCoarse/baseCase/constant/polyMesh/: boundary  faces  neighbour  owner  points
data/pipeFlowFine/baseCase/constant/polyMesh/: boundary  faces  neighbour  owner  points
docs/: index.html
examples/: harmonic_oscillator.py  mpi_futures.py  numpy_bug.py
lit/: adios.md  cylinder.md  io.md  mpi_oscillator.md  parafutures.md  paranoodles.md  parareal.md  pyfoam.md  testing.md  tutorial.md
notebooks/: .gitignore  Check_convergence.ipynb  Harmonic_Oscillator.ipynb  blobs.ipynb  c1  pintFoam  test.ipynb  uniform_fields.ipynb
paranoodles/: __init__.py  abstract.py  iterate_solution.py  tabulate_solution.py
pintFoam/: __init__.py  clean.py  foam.py  foamTools.py  run.py  solution.py  utils.py  vector.py
pintFoam/parareal/: __init__.py  abstract.py  forward_euler.py  futures.py  harmonic_oscillator.py  iterate_solution.py  parareal.py  tabulate_solution.py
public/: index.html
system/: controlDict
test/: test_foam_run.py  test_futures.py  test_map_fields.py  test_utils.py
test/cases/pitzDaily/system/: controlDict
