[tool.poetry]
name = "cylinder"
version = "0.1.0"
description = "Parallel-in-time demo, computing flow around cylinder using OpenFOAM and the Parareal algorithm."
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache-2.0"
packages = [
    { include = "pintFoam" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyFoam = "^2021.6"
byteparsing = "^0.1.2"
numpy = "^1.22"
argh = "^0.26.2"
dask = {extras = ["complete"], version = "^2021.11.1"}
entangled-filters = "^0.8.3"
pandoc-eqnos = "^2.5.0"
pandoc-fignos = "^2.4.0"
matplotlib = "^3.5.0"
graphviz = "^0.18.2"
ipython = "^8.0.0"
plotnine = "^0.8.0"
ipykernel = "^6.13.0"
mpi4py = "^3.1.3"
dask-mpi = "^2022.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = ">=0.942, <1.0"
pytest-cov = "^2.12.1"
pytest-flake8 = "^1.0.7"
pytest-mypy = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
